--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "mocha spec/*.js"
   },
+  "engines": {
+    "node": ">=6.12",
+    "npm": ">=3.0.0",
+    "yarn": ">=1.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bestikk/bestikk-jdk-ea.git"
