--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
-  - "4.4.7"
+- '6'
+- 'lts/*'
+- 'node'
 
 before_script:
-  - npm install
+- npm install
 
 script:
- - npm run test
+ npm run test
 
 sudo: false
